--- a/i18n/es.po
+++ b/i18n/es.po
@@ -25,4 +25,10 @@ msgstr "Confirmar y entregar"
 msgid "Sale Order"
 msgstr "Pedido de venta"
 
+#. module: sale_order_picking_all_done
+#: model_terms:ir.ui.view,arch_db:sale_order_picking_all_done.view_order_form_inherit
+msgid "Confirm and invoiced"
+msgstr "Confirmar y facturar"
+
+
 
